--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "flag-icons": "^7.2.3",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
+    "react-curved-text": "^3.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "react-swiper": "^0.1.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
